[tool.poetry]
name = "zooparser"
version = "0.1.0"
description = ""
authors = ["komediantto <komediantto@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
requests = "^2.31.0"
lxml = "^4.9.2"
pandas = "^2.0.2"
openpyxl = "^3.1.2"
aiohttp = "^3.8.4"
fake-useragent = "^1.1.3"
brotli = "^1.0.9"
tqdm = "^4.65.0"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
